# py2json

./: .buildinfo  .gitignore  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.cfg  setup.py  table_of_contents.html
.github/workflows/: ci.yml
_sources/module_docs/: py2json.rst.txt
_sources/module_docs/py2json/: util.rst.txt  w_glom.rst.txt
_sources/module_docs/py2json/inspire/: func_serialization.rst.txt  serializing_sklearn_estimators.rst.txt
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_modules/py2json/: ctor.html  encoders.html  fakit.html  obj2dict.html  util.html
docs/module_docs/: py2json.html
docs/module_docs/py2json/: ctor.html  encoders.html  fakit.html  inspire.html  obj2dict.html  util.html  w_glom.html
docsrc/: index.rst  table_of_contents.rst
docsrc/module_docs/py2json/: fakit.rst  inspire.rst  obj2dict.rst
module_docs/: py2json.html
module_docs/py2json/: ctor.html  encoders.html  fakit.html  inspire.html  obj2dict.html  util.html  w_glom.html
module_docs/py2json/inspire/: attribute_tree.html  example_fakit_use.html  func_serialization.html  serializing_sklearn_estimators.html
py2json/: __init__.py  ctor.py  encoders.py  fakit.py  obj2dict.py  util.py  w_glom.py
py2json/inspire/: __init__.py  attribute_tree.py  example_fakit_use.py  func_serialization.py  serializing_sklearn_estimators.py
py2json/tests/: test_ctor.py
(+10 files in other folders)
