[metadata]
version = 0.1.2
description = Tools for json serialization of python objects
license = mit
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords =

name = py2json
display_name = py2json

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    boltons
    glom
    numpy
    i2
    anytree
    scikit-learn
    scipy
